--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ typing-extensions = "^4.12.2"
 python-dotenv = "^1.0.1"
 greenlet = "^3.1.1"
 psycopg2 = "^2.9.10"
+httpx = {extras = ["socks"], version = "^0.28.1"}
+httpx-sse = "^0.4.0"
 
 
 [build-system]
