--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -20,10 +21,10 @@ snowflake-id = "^1.0.2"
 typing-extensions = "^4.12.2"
 python-dotenv = "^1.0.1"
 greenlet = "^3.1.1"
-psycopg2 = "^2.9.10"
 httpx = {extras = ["socks"], version = "^0.28.1"}
 httpx-sse = "^0.4.0"
 pydantic-settings = "^2.7.0"
+psycopg2-binary = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
