--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ httpx-sse = "^0.4.0"
 pydantic-settings = "^2.7.0"
 psycopg2-binary = "^2.9.10"
 asyncz = "^0.12.0"
+selenium-wire = "^5.1.0"
+selenium = "^4.27.1"
+blinker = "^1.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
