--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,10 @@ httpx = {extras = ["socks"], version = "^0.28.1"}
 httpx-sse = "^0.4.0"
 pydantic-settings = "^2.7.0"
 psycopg2-binary = "^2.9.10"
-asyncz = "^0.12.0"
 selenium-wire = "^5.1.0"
 selenium = "^4.27.1"
 blinker = "^1.9.0"
+async-cron = "^1.6.2"
 
 
 [tool.poetry.group.dev.dependencies]
