--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,4 @@ repos:
     rev: "" # Use the sha / tag you want to point at
     hooks:
       - id: mypy
+        additional_dependencies: [types-requests]
